fix various bugs with cocoa key handling. b=404632 r=masayuki sr=roc